# GridSentinel

./: .gitignore  SETUP_GUIDE.txt  generate_report.py  pyproject.toml  requirements.txt
config/: default.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AlertView.jsx  AuditView.jsx  Login.css  PredView.jsx  TheftChart.jsx  login.jsx
gridsentinel/: __init__.py  config.py  pipeline.py
gridsentinel/api/: app.py  auth.py  database.py  schemas.py
gridsentinel/evaluation/: __init__.py  classification.py  forecasting.py
gridsentinel/features/: __init__.py  cass_signals.py  feature_store.py  gsi_signals.py  holidays.py
gridsentinel/ingestion/: __init__.py  loader.py  validator.py
gridsentinel/models/: __init__.py  demand_forecaster.py  explainability.py  theft_detector.py
gridsentinel/scoring/: __init__.py  cass.py  economic.py  gsi.py  gss.py
models/: theft_detector.json
scripts/: run_pipeline.py  train_forecaster.py
tests/: __init__.py
tests/fixtures/: sample_data.py
tests/integration/: test_pipeline.py
tests/unit/: test_cass_signals.py  test_evaluation.py  test_gsi_signals.py  test_scoring.py
