[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gridsentinel"
version = "2.0.0"
description = "GridSentinel AI — Smart Grid Theft Detection and Stress Scoring System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "torch>=2.2",
    "tslearn>=0.6",
    "shap>=0.45",
    "lime>=0.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gridsentinel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = ["E501"]
